--- a/Atividade Front/index.html
+++ b/Atividade Front/index.html
@@ -40,7 +40,17 @@
              <strong>&lt;p&gt;&lt;/p&gt;</strong>
              <strong>&lt;footer&gt;&lt;/footer&gt;</strong>
             </h2>
-        
+
+            <h3>&lt;img&gt;</h3>
+            <p>The above example shows usage of the <img> element:
+
+                The src attribute is required, and contains the path to the image you want to embed.
+                The alt attribute holds a text description of the image, which isn't mandatory but is incredibly useful for accessibility — screen readers read this description out to their users so they know what the image means. Alt text is also displayed on the page if the image can't be loaded for some reason: for example, network errors, content blocking, or linkrot.</p>
+            <br>
+            <figure>
+            <img src="/Exercicios-9-e-10.jpg" alt="Imagem exemplo" >
+            <figcaption>Tutorial de HTML5</figcaption>
+            </figure>
     </div>
 
     <footer >
